added a working test

--- a/products/index.html
+++ b/products/index.html
@@ -17,7 +17,12 @@
     </header>
     <main>
         <h2>Vegetables</h2>
-        <ul id="veggies"></ul>
+        <ul id="veggies">
+            <li class="confused-fruit" title="A small, juicy treat."><img src="../assets/cherry.jpg" alt="Cherry Tomato image">
+            <p class="price">$2.00 <button value="undefined">Add</button>
+            </p>
+            </li>
+        </ul>
     </main>
 
     <script src="products.js" type="module"></script>
