added a background image to css and styled the list/buttons

--- a/index.html
+++ b/index.html
@@ -6,22 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="products/main.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/home.css">
+    <title>E-Commerce Site</title>
 </head>
 
-<body>
+<body class="main-page">
     <header>
         <h1>Nathan's Vegetable List</h1>
     </header>
 
     <main>
-        <section class="main-page">
+        <section>
             <p>
-                <img class="" src="">
-            </p>
-            <p>
-                <a href="products">Buy Veggies</a>
+                <a href="products" class="buy">Buy Veggies</a>
             </p>
         </section>
     </main>
@@ -30,6 +27,7 @@
         
     </footer>
 
+<
 </body>
 
 </html>
