--- a/products/index.html
+++ b/products/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../common/main.css">
     <link rel="stylesheet" href="products.css">
-    <title>Document</title>
+    <title>Vegetable List</title>
 </head>
 <body>
     <header>
