static desing for cart, added html table for shopping cart page

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <main>
         <section>
             <p>
-                <a href="products" class="buy">Buy Veggies</a>
             </p>
         </section>
     </main>
-
+    
     <footer>
-        
+        <nav>
+            <a href="products" class="buy">Buy Veggies</a>
+            <a href="/cart/">Shopping Cart</a>
+        </nav>
     </footer>
-
-<
 </body>
 
 </html>
