--- a/products/index.html
+++ b/products/index.html
@@ -9,18 +9,19 @@
 </head>
 <body>
     <header>
-        <h1>Nathan's Vegetable List</h1>
-        <nav>
-            <a href="../">Home</a>
-            <a href="products">Add to Cart</a>
-        </nav>
     </header>
     <main>
-        <h2>Vegetables</h2>
+        <h1>Nathan's Veggies</h1>
         <ul id="veggies">
         </ul>
     </main>
-
+    
     <script src="products.js" type="module"></script>
 </body>
+    <footer>
+        <nav>
+            <a href="../">Home</a>
+            <a href="../cart/">Add to Cart</a>
+        </nav>
+    </footer>
 </html>
