added some styling to my page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body class="main-page">
     <header>
+        <div>
         <h1>Nathan's Vegetable List</h1>
+        </div>
     </header>
 
     <main>
@@ -23,8 +25,8 @@
     </main>
     
     <footer>
-        <nav>
-            <a href="products" class="buy">Buy Veggies</a>
+        <nav id="buy">
+            <a href="products">Buy Veggies</a>
             <a href="/cart/">Shopping Cart</a>
         </nav>
     </footer>
