--- a/cart/index.html
+++ b/cart/index.html
@@ -7,7 +7,7 @@
     <title>Shopping Cart</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>Your virtual veggie cart</h1>
     </header>
     
