with the help of classmates, I was able to get my place order function working.

--- a/products/index.html
+++ b/products/index.html
@@ -21,7 +21,7 @@
     <footer>
         <nav>
             <a href="../">Home</a>
-            <a href="../cart/">Add to Cart</a>
+            <a href="../cart/">Cart</a>
         </nav>
     </footer>
 </html>
