--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="/cart/">Cart</a>
         </nav>
         <div>
-        <h1>Nathan's Delicious Veggies</h1>
+        <h1>Highgrove</h1>
         </div>
     </header>
 
@@ -27,8 +27,8 @@
         </section>
     </main>
     
-    <footer>
-    </footer>
 </body>
+        <footer>
+        </footer>
 
 </html>
