--- a/products/index.html
+++ b/products/index.html
@@ -11,7 +11,7 @@
     <header>
     </header>
     <main>
-        <h1>Nathan's Veggies</h1>
+        <h1>Veggie Menu</h1>
         <ul id="veggies">
         </ul>
     </main>
