finshed my alert and fixed some issues I was having with my button/ cart page

--- a/products/index.html
+++ b/products/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <header>
+        <nav>
+            <a href="../">Home</a>
+            <a href="../cart/">Cart</a>
+        </nav>
     </header>
     <main>
         <h1>Veggie Menu</h1>
@@ -20,8 +24,6 @@
 </body>
     <footer>
         <nav>
-            <a href="../">Home</a>
-            <a href="../cart/">Cart</a>
         </nav>
     </footer>
 </html>
